/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Jonathan Strickland
 */

package ucf.assignments;


public class Main {
    public static void main(String[] args) {
        App.main(args);
    }
}
