/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Jonathan Strickland
 */

package ucf.assignments.models;

public class PersistentData {
    public final static String version = "1.0";
    public final static String mainFXMLName = "MainPane.fxml";
    public final static String toDoModelFXMLName = "ToDoModel.fxml";
}
